# sauvidya-pace

./: .gitignore  LICENSE  README.md  pyproject.toml
adrs/: 001-accessibility-as-protocol-not-rendering.md
figures/: pace_architecture.mmd  pace_sequence.mmd
specification/: Pace.cfg  Pace.tla
src/pace/: __init__.py
src/pace/mcp_server/: EXAMPLES.md  README.md  __init__.py  __main__.py  server.py  tools.py
src/pace/types/: __init__.py  adaptive_interaction_contract.py  consent_capacity_check.py  interaction_modality.py  principal_capability_profile.py
src/pace/validators/: __init__.py  capacity.py  contract.py  modality.py
tests/: test_types.py  test_validators.py
tests/mcp_server/: test_server_stdio.py  test_tools.py
v1/: README.md
